sumo/tests/netconvert/errors/xml_false_edg/options.netconvert
--xml-edge-files=%SUMO_DIST%\tests\netconvert\errors\xml_false_edg\hokkaido2.edg.xml --xml-node-files=%SUMO_DIST%\tests\netconvert\errors\xml_false_edg\hokkaido.nod.xml --output-file=output/net.net.xml
